Added a lot of new pages

--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,13 @@
 }
 
 .donate {
-  position: relative;
+  position: static;
+}
+
+.calendar {
+  position: center;
+}
+
+html {  
+  font-family: 'Source Code Pro', ;
 }
